@@ -1,3 +1,8 @@
+2017-08-16  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/81116
+	* gfortran.dg/realloc_on_assignment_29.f90:  New test.
+
 2017-08-16  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/46091
